examples/type_system/failing/26_adt_match_constructor_arity_mismatch.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E082: constructor arity mismatch in match pattern.

data Pair {
    Pair(Int, Int),
}

fn bad(x: Pair) -> Int {
    match x {
        Pair(a) -> a,
    }
}

fn main() {
    bad(Pair(1, 2))
}
